# models/author.go
@@ -18,6 +18,6 @@ type CreateModelAuthor struct {
 
 type UpdateAuthorResponse struct {
 	ID string	`json:"id"`
-	Lastname  string `json:"lastname" minLenth:"3" maxLength:"16" example:"John"`
-	Firstname string `json:"firstname" minLenth:"3" maxLength:"16" example:"Doe"`
+	Lastname  string `json:"lastname" binding:"required" minLenth:"3" maxLength:"16" example:"John"`
+	Firstname string `json:"firstname" binding:"required" minLenth:"3" maxLength:"16" example:"Doe"`
 }
